dbus (1.2.16-3) UNRELEASED; urgency=low

  * debian/control
    - Drop Build-Depends on docbook-utils, apparently no longer necessary.
  * debian/rules
    - Explicitly disable audit support so we don't accidentally pick up a
      libaudit shlib dependency.

 -- Michael Biebl <biebl@debian.org>  Thu, 16 Jul 2009 07:29:00 +0200

dbus (1.2.16-2) unstable; urgency=low

  * Rebuild against debhelper (>= 7.2.23) that fixes a regression in
    dh_install which did not correctly strip debian/tmp. (Closes: #537125)
  * debian/patches/20_kbsd_cmsgcred.patch
    - Fix incorrect usage of cmsgcred on kFreeBSD. Thanks to Aurelien Jarno
      for the patch.
  * debian/patches/30_rt-as-needed.patch
    - Fix spurious build failures on alpha and ia64 when using -Wl,--as-needed
      by changing the link order of libdbus-convenience.la and -lrt.

 -- Michael Biebl <biebl@debian.org>  Thu, 16 Jul 2009 02:03:18 +0200

dbus (1.2.16-1) unstable; urgency=low

  * New upstream release.
  * debian/libdbus-1-3.symbols
    - Update for API additions.
  * debian/rules
    - Bump shlibs to 1.2.16.
  * Install libdbus to /lib. Upstart requires libdbus before /usr is
    mounted. Keep the development files libdbus-1*.{a,so} in /usr/lib.
  * Bump Standards-Version to 3.8.2. No further changes.

 -- Michael Biebl <biebl@debian.org>  Wed, 15 Jul 2009 00:39:18 +0200

dbus (1.2.14-3) unstable; urgency=low

  * debian/dbus.postinst
    - Suppress output from adduser.
  * debian/dbus.postrm
    - Cleanup /var/lib/dbus on purge.
  * debian/rules
    - Compile dbus-daemon without -pie on mipsen. This is a workaround for a
      toolchain bug on mipsen (#532821) which causes dbus-daemon to segfault.
      (Closes: #528145)

 -- Michael Biebl <biebl@debian.org>  Wed, 17 Jun 2009 21:03:57 +0200

dbus (1.2.14-2) unstable; urgency=low

  * debian/dbus.postrm
    - Add missing whitespace before ']'.

 -- Michael Biebl <biebl@debian.org>  Fri, 08 May 2009 23:30:35 +0200

dbus (1.2.14-1) unstable; urgency=low
