@@ -5,8 +5,10 @@ dbus (1.2.16-3) UNRELEASED; urgency=low
   * debian/rules
     - Explicitly disable audit support so we don't accidentally pick up a
       libaudit shlib dependency.
+    - Drop our workaround for the broken binutils and reenable -pie on mips.
+      (Closes: #533460)
 
- -- Michael Biebl <biebl@debian.org>  Thu, 16 Jul 2009 07:29:00 +0200
+ -- Michael Biebl <biebl@debian.org>  Thu, 12 Nov 2009 09:04:48 +0100
 
 dbus (1.2.16-2) unstable; urgency=low
 
